# Translation files
set(ts_files
	gui/designer/translations/de_DE.ts
	gui/designer/translations/en_EN.ts
	gui/designer/translations/es_ES.ts
	gui/designer/translations/fr_FR.ts
	gui/designer/translations/hu_HU.ts
	gui/designer/translations/it_IT.ts
	gui/designer/translations/pt_BR.ts
	gui/designer/translations/ru_RU.ts
	gui/designer/translations/tr_TR.ts
	gui/designer/translations/zh_CN.ts

	gui/designer/translations/qt_de.ts
	gui/designer/translations/qt_es.ts
	gui/designer/translations/qt_fr.ts
	gui/designer/translations/qt_hu.ts
	gui/designer/translations/qt_it.ts
	gui/designer/translations/qt_pt_BR.ts
	gui/designer/translations/qt_ru.ts
	gui/designer/translations/qt_tr.ts
	gui/designer/translations/qt_zh_CN.ts
	)
set_source_files_properties(${ts_files} PROPERTIES OUTPUT_LOCATION "${CMAKE_CURRENT_BINARY_DIR}/translations")
configure_file(gui/designer/translations.qrc ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
qt_add_translation(qm_files ${ts_files})
add_custom_target(translations DEPENDS ${qm_files})

include(FetchContent)
if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
	set(P7ZIP_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/extra/7z1900" CACHE INTERNAL "7ZIP source dir")
else()
	set(P7ZIP_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/extra/p7zip-17.04" CACHE INTERNAL "7ZIP source dir")
endif()
FetchContent_Declare(lib7zip
	SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/extra/lib7zip-53abfeb
	)
FetchContent_MakeAvailable(lib7zip)

FetchContent_Declare(qkeycode
	SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/extra/qkeycode
	)
FetchContent_MakeAvailable(qkeycode)

set(audio_srcs
	audio/blip_buf.c
	audio/blipbuf.c
	audio/channels.c
	audio/delay.c
	audio/handler.c
	audio/mono.c
	audio/panning.c
	audio/wave.c
	$<$<PLATFORM_ID:Linux>:
		audio/alsa/snd.c
	>
	$<$<PLATFORM_ID:FreeBSD,OpenBSD>:
		audio/sndio/snd.c
	>
	$<$<PLATFORM_ID:Windows>:
		audio/xaudio/snd.c
	>
	)

set(c++_srcs
	c++/crc/crc.cpp
	c++/crc/Crc32.cpp
	c++/l7zip/l7z.cpp
	c++/pic16c5x/pic16c5x.cpp
	c++/pic16c5x/pic16c5x_m.cpp
	c++/xBRZ/xbrz.cpp
	c++/xBRZ/xbrz_wrap.cpp
	)

set(core_srcs
	core/input/arkanoid.c
	core/input/famicom.c
	core/input/family_basic_keyboard.c
	core/input/four_score.c
	core/input/nes_001.c
	core/input/nsf_controller.c
	core/input/nsf_mouse.c
	core/input/oeka_kids_tablet.c
	core/input/snes_mouse.c
	core/input/standard_controller.c
	core/input/subor_keyboard.c
	core/input/vs.c
	core/input/zapper.c

	core/mappers/EE93Cx6.c
	core/mappers/mapper_0.c
	core/mappers/mapper_1.c
	core/mappers/mapper_4.c
	core/mappers/mapper_14.c
	core/mappers/mapper_15.c
	core/mappers/mapper_21.c
	core/mappers/mapper_22.c
	core/mappers/mapper_23.c
	core/mappers/mapper_25.c
	core/mappers/mapper_28.c
	core/mappers/mapper_29.c
	core/mappers/mapper_31.c
	core/mappers/mapper_36.c
	core/mappers/mapper_37.c
	core/mappers/mapper_38.c
	core/mappers/mapper_40.c
	core/mappers/mapper_42.c
	core/mappers/mapper_43.c
	core/mappers/mapper_44.c
	core/mappers/mapper_45.c
	core/mappers/mapper_46.c
	core/mappers/mapper_47.c
	core/mappers/mapper_49.c
	core/mappers/mapper_50.c
	core/mappers/mapper_51.c
	core/mappers/mapper_52.c
	core/mappers/mapper_53.c
	core/mappers/mapper_57.c
	core/mappers/mapper_58.c
	core/mappers/mapper_59.c
	core/mappers/mapper_60.c
	core/mappers/mapper_61.c
	core/mappers/mapper_62.c
	core/mappers/mapper_63.c
	core/mappers/mapper_70.c
	core/mappers/mapper_74.c
	core/mappers/mapper_81.c
	core/mappers/mapper_83.c
	core/mappers/mapper_91.c
	core/mappers/mapper_100.c
	core/mappers/mapper_101.c
	core/mappers/mapper_103.c
	core/mappers/mapper_105.c
	core/mappers/mapper_106.c
	core/mappers/mapper_108.c
	core/mappers/mapper_111.c
	core/mappers/mapper_114.c
	core/mappers/mapper_115.c
	core/mappers/mapper_116.c
	core/mappers/mapper_117.c
	core/mappers/mapper_119.c
	core/mappers/mapper_120.c
	core/mappers/mapper_121.c
	core/mappers/mapper_123.c
	core/mappers/mapper_126.c
	core/mappers/mapper_134.c
	core/mappers/mapper_152.c
	core/mappers/mapper_156.c
	core/mappers/mapper_163.c
	core/mappers/mapper_164.c
	core/mappers/mapper_165.c
	core/mappers/mapper_166.c
	core/mappers/mapper_167.c
	core/mappers/mapper_168.c
	core/mappers/mapper_178.c
	core/mappers/mapper_182.c
	core/mappers/mapper_183.c
	core/mappers/mapper_185.c
	core/mappers/mapper_186.c
	core/mappers/mapper_187.c
	core/mappers/mapper_188.c
	core/mappers/mapper_189.c
	core/mappers/mapper_190.c
	core/mappers/mapper_191.c
	core/mappers/mapper_192.c
	core/mappers/mapper_194.c
	core/mappers/mapper_195.c
	core/mappers/mapper_196.c
	core/mappers/mapper_197.c
	core/mappers/mapper_198.c
	core/mappers/mapper_199.c
	core/mappers/mapper_200.c
	core/mappers/mapper_201.c
	core/mappers/mapper_202.c
	core/mappers/mapper_203.c
	core/mappers/mapper_204.c
	core/mappers/mapper_205.c
	core/mappers/mapper_208.c
	core/mappers/mapper_212.c
	core/mappers/mapper_213.c
	core/mappers/mapper_214.c
	core/mappers/mapper_215.c
	core/mappers/mapper_217.c
	core/mappers/mapper_218.c
	core/mappers/mapper_219.c
	core/mappers/mapper_221.c
	core/mappers/mapper_222.c
	core/mappers/mapper_225.c
	core/mappers/mapper_226.c
	core/mappers/mapper_227.c
	core/mappers/mapper_229.c
	core/mappers/mapper_230.c
	core/mappers/mapper_231.c
	core/mappers/mapper_235.c
	core/mappers/mapper_237.c
	core/mappers/mapper_238.c
	core/mappers/mapper_240.c
	core/mappers/mapper_241.c
	core/mappers/mapper_242.c
	core/mappers/mapper_244.c
	core/mappers/mapper_245.c
	core/mappers/mapper_246.c
	core/mappers/mapper_249.c
	core/mappers/mapper_250.c
	core/mappers/mapper_252.c
	core/mappers/mapper_254.c
	core/mappers/mapper_256.c
	core/mappers/mapper_259.c
	core/mappers/mapper_260.c
	core/mappers/mapper_262.c
	core/mappers/mapper_263.c
	core/mappers/mapper_266.c
	core/mappers/mapper_267.c
	core/mappers/mapper_269.c
	core/mappers/mapper_271.c
	core/mappers/mapper_287.c
	core/mappers/mapper_288.c
	core/mappers/mapper_291.c
	core/mappers/mapper_292.c
	core/mappers/mapper_297.c
	core/mappers/mapper_298.c
	core/mappers/mapper_299.c
	core/mappers/mapper_300.c
	core/mappers/mapper_302.c
	core/mappers/mapper_308.c
	core/mappers/mapper_311.c
	core/mappers/mapper_313.c
	core/mappers/mapper_315.c
	core/mappers/mapper_322.c
	core/mappers/mapper_323.c
	core/mappers/mapper_325.c
	core/mappers/mapper_327.c
	core/mappers/mapper_331.c
	core/mappers/mapper_333.c
	core/mappers/mapper_334.c
	core/mappers/mapper_337.c
	core/mappers/mapper_339.c
	core/mappers/mapper_344.c
	core/mappers/mapper_345.c
	core/mappers/mapper_348.c
	core/mappers/mapper_351.c
	core/mappers/mapper_353.c
	core/mappers/mapper_355.c
	core/mappers/mapper_356.c
	core/mappers/mapper_357.c
	core/mappers/mapper_359.c
	core/mappers/mapper_360.c
	core/mappers/mapper_361.c
	core/mappers/mapper_362.c
	core/mappers/mapper_366.c
	core/mappers/mapper_368.c
	core/mappers/mapper_369.c
	core/mappers/mapper_370.c
	core/mappers/mapper_372.c
	core/mappers/mapper_374.c
	core/mappers/mapper_375.c
	core/mappers/mapper_377.c
	core/mappers/mapper_380.c
	core/mappers/mapper_381.c
	core/mappers/mapper_382.c
	core/mappers/mapper_384.c
	core/mappers/mapper_389.c
	core/mappers/mapper_393.c
	core/mappers/mapper_394.c
	core/mappers/mapper_395.c
	core/mappers/mapper_396.c
	core/mappers/mapper_398.c
	core/mappers/mapper_399.c
	core/mappers/mapper_400.c
	core/mappers/mapper_401.c
	core/mappers/mapper_403.c
	core/mappers/mapper_404.c
	core/mappers/mapper_406.c
	core/mappers/mapper_409.c
	core/mappers/mapper_410.c
	core/mappers/mapper_411.c
	core/mappers/mapper_412.c
	core/mappers/mapper_413.c
	core/mappers/mapper_414.c
	core/mappers/mapper_415.c
	core/mappers/mapper_416.c
	core/mappers/mapper_417.c
	core/mappers/mapper_420.c
	core/mappers/mapper_428.c
	core/mappers/mapper_429.c
	core/mappers/mapper_431.c
	core/mappers/mapper_432.c
	core/mappers/mapper_433.c
	core/mappers/mapper_434.c
	core/mappers/mapper_436.c
	core/mappers/mapper_437.c
	core/mappers/mapper_442.c
	core/mappers/mapper_446.c
	core/mappers/mapper_447.c
	core/mappers/mapper_451.c
	core/mappers/mapper_452.c
	core/mappers/mapper_455.c
	core/mappers/mapper_456.c
	core/mappers/mapper_457.c
	core/mappers/mapper_471.c
	core/mappers/mapper_512.c
	core/mappers/mapper_513.c
	core/mappers/mapper_516.c
	core/mappers/mapper_518.c
	core/mappers/mapper_524.c
	core/mappers/mapper_527.c
	core/mappers/mapper_529.c
	core/mappers/mapper_530.c
	core/mappers/mapper_538.c
	core/mappers/mapper_539.c
	core/mappers/mapper_541.c
	core/mappers/mapper_543.c
	core/mappers/mapper_547.c
	core/mappers/mapper_550.c
	core/mappers/mapper_554.c
	core/mappers/mapper_556.c
	core/mappers/mapper_557.c
	core/mappers/mapper_558.c
	core/mappers/mapper_559.c
	core/mappers/mapper_560.c
	core/mappers/mapper_60311C.c
	core/mappers/mapper_80013B.c
	core/mappers/mapper_831128C.c
	core/mappers/mapper_891227.c
	core/mappers/mapper_A65AS.c
	core/mappers/mapper_AC08.c
	core/mappers/mapper_Active.c
	core/mappers/mapper_Agci.c
	core/mappers/mapper_Ave.c
	core/mappers/mapper_AxROM.c
	core/mappers/mapper_Bandai.c
	core/mappers/mapper_BJ56.c
	core/mappers/mapper_BMC64IN1NOREPEAT.c
	core/mappers/mapper_BMC70IN1.c
	core/mappers/mapper_BMC810544CA1.c
	core/mappers/mapper_BMC830425C.c
	core/mappers/mapper_BMCFK23C.c
	core/mappers/mapper_BMCG146.c
	core/mappers/mapper_BMCHP898F.c
	core/mappers/mapper_BMCNTD03.c
	core/mappers/mapper_BOY.c
	core/mappers/mapper_BS5.c
	core/mappers/mapper_BxROM.c
	core/mappers/mapper_Caltron.c
	core/mappers/mapper_Camerica.c
	core/mappers/mapper_CC_21.c
	core/mappers/mapper_CNROM.c
	core/mappers/mapper_ColorDreams.c
	core/mappers/mapper_Coolboy.c
	core/mappers/mapper_Coolgirl.c
	core/mappers/mapper_CPROM.c
	core/mappers/mapper_CTC09.c
	core/mappers/mapper_DREAMTECH01.c
	core/mappers/mapper_DRIPGAME.c
	core/mappers/mapper_EDU2000.c
	core/mappers/mapper_EH8813A.c
	core/mappers/mapper_FARIDUNROM8IN1.c
	core/mappers/mapper_FDS.c
	core/mappers/mapper_FFESMC.c
	core/mappers/mapper_FS304.c
	core/mappers/mapper_GameGenie.c
	core/mappers/mapper_GS_20xx.c
	core/mappers/mapper_GxROM.c
	core/mappers/mapper_Hen.c
	core/mappers/mapper_Hes.c
	core/mappers/mapper_Irem.c
	core/mappers/mapper_Jaleco.c
	core/mappers/mapper_JYASIC.c
	core/mappers/mapper_K3036.c
	core/mappers/mapper_K3046.c
	core/mappers/mapper_K3071.c
	core/mappers/mapper_Kaiser.c
	core/mappers/mapper_KS106C.c
	core/mappers/mapper_KS7012.c
	core/mappers/mapper_KS7013B.c
	core/mappers/mapper_KS7016.c
	core/mappers/mapper_KS7017.c
	core/mappers/mapper_KS7021A.c
	core/mappers/mapper_KS7030.c
	core/mappers/mapper_KS7031.c
	core/mappers/mapper_KS7032.c
	core/mappers/mapper_KS7037.c
	core/mappers/mapper_LH10.c
	core/mappers/mapper_LH32.c
	core/mappers/mapper_LH51.c
	core/mappers/mapper_Magic.c
	core/mappers/mapper_Malee.c
	core/mappers/mapper_MMC2andMMC4.c
	core/mappers/mapper_MMC3_old.c
	core/mappers/mapper_MMC5.c
	core/mappers/mapper_N118.c
	core/mappers/mapper_Namco.c
	core/mappers/mapper_NSF.c
	core/mappers/mapper_Ntdec.c
	core/mappers/mapper_Rcm.c
	core/mappers/mapper_RESETNROMXIN1.c
	core/mappers/mapper_Rex.c
	core/mappers/mapper_RT_01.c
	core/mappers/mapper_SA005A.c
	core/mappers/mapper_Sachen.c
	core/mappers/mapper_SC_127.c
	core/mappers/mapper_Sunsoft.c
	core/mappers/mapper_T262.c
	core/mappers/mapper_Taito.c
	core/mappers/mapper_Tengen.c
	core/mappers/mapper_TJ03.c
	core/mappers/mapper_Txc.c
	core/mappers/mapper_TxROM.c
	core/mappers/mapper_UNIF8157.c
	core/mappers/mapper_UNIFSMB2J.c
	core/mappers/mapper_UxROM.c
	core/mappers/mapper_VRC1.c
	core/mappers/mapper_VRC3.c
	core/mappers/mapper_VRC6.c
	core/mappers/mapper_VRC7.c
	core/mappers/mapper_VRC7_snd.c
	core/mappers/mapper_Vs.c
	core/mappers/mapper_WS.c
	core/mappers/mapper_YOKO.c
	core/mappers/OneBus.c
	core/mappers/opll.c
	core/mappers/MMC1.c
	core/mappers/MMC3.c
	core/mappers/serial_devices.cpp
	core/mappers/serial_devices_interface.cpp
	core/mappers/SST39SF040.c
	core/mappers/VRC2and4.c

	core/apu.c
	core/bck_states.c
	core/cheat.c
	core/cpu.c
	core/draw_on_screen.c
	core/emu.c
	core/emu_thread.c
	core/external_calls.c
	core/fds.c
	core/fps.c
	core/ines.c
	core/input.c
	core/irqA12.c
	core/irql2f.c
	core/jstick.c
	core/main.c
	core/mappers.c
	core/nsf.c
	core/nsfe.c
	core/overscan.c
	core/palette.c
	core/patcher.c
	core/patcher_xdelta3_wrap.c
	core/ppu.c
	$<$<BOOL:${ENABLE_FFMPEG}>:core/recording.c>
	core/rewind.c
	core/rom_mem.c
	core/save_slot.c
	core/sha1.c
	core/tape_data_recorder.c
	core/uncompress.c
	core/unif.c
	core/vector.c
	)

set(extra_srcs
	extra/filter-c/filter.c
	extra/kissfft/kiss_fft.c
	extra/singleapplication/singleapplication.cpp
	extra/singleapplication/singleapplication_p.cpp
	)

set(gui_ui_srcs
	gui/designer/dlgCfgNSCode.ui
	gui/designer/dlgCmdLineHelp.ui
	gui/designer/dlgHeaderEditor.ui
	gui/designer/dlgJsc.ui
	gui/designer/dlgKeyboard.ui
	gui/designer/dlgLog.ui
	gui/designer/dlgSettings.ui
	gui/designer/dlgStdPad.ui
	gui/designer/dlgUncomp.ui
	gui/designer/dlgVsSystem.ui
	gui/designer/dlgWizard.ui
	gui/designer/mainWindow.ui
	gui/designer/wdgAPUChannels.ui
	gui/designer/wdgCheatsEditor.ui
	gui/designer/wdgKeyboardFB.ui
	gui/designer/wdgKeyboardSubor.ui
	gui/designer/wdgNTSCFilter.ui
	gui/designer/wdgNTSCBisqwitFilter.ui
	gui/designer/wdgOverlayUi.ui
	gui/designer/wdgPaletteEditor.ui
	gui/designer/wdgRewind.ui
	gui/designer/wdgRotateScreen.ui
	gui/designer/wdgSettingsAudio.ui
	gui/designer/wdgSettingsCheats.ui
	gui/designer/wdgSettingsGeneral.ui
	gui/designer/wdgSettingsInput.ui
	gui/designer/wdgSettingsPPU.ui
	gui/designer/wdgSettingsRecording.ui
	gui/designer/wdgSettingsVideo.ui
	gui/designer/wdgState.ui
	gui/designer/resources.qrc
	)

set(gui_srcs
	# N.B: Include here both cpp and hpp files since automoc relies on both types
	gui/cgp.cpp
	gui/cmd_line.cpp
	gui/dlgCmdLineHelp.cpp
	gui/dlgCmdLineHelp.hpp
	gui/dlgHeaderEditor.cpp
	gui/dlgHeaderEditor.hpp
	gui/dlgJsc.cpp
	gui/dlgJsc.hpp
	gui/dlgKeyboard.cpp
	gui/dlgKeyboard.hpp
	gui/dlgLog.cpp
	gui/dlgLog.hpp
	gui/dlgSettings.cpp
	gui/dlgSettings.hpp
	gui/dlgStdPad.cpp
	gui/dlgStdPad.hpp
	gui/dlgUncomp.cpp
	gui/dlgUncomp.hpp
	gui/dlgVsSystem.cpp
	gui/dlgVsSystem.hpp
	gui/dlgWizard.cpp
	gui/dlgWizard.hpp
	gui/mainApplication.cpp
	gui/mainApplication.hpp
	gui/mainWindow.cpp
	gui/mainWindow.hpp
	gui/nes20db.cpp
	gui/objCheat.cpp
	gui/objCheat.hpp
	gui/objSettings.cpp
	gui/objSettings.hpp
	gui/qt.cpp
	gui/recent_roms.cpp
	gui/settings.cpp
	gui/tas.cpp
	gui/wdgAPUChannels.cpp
	gui/wdgAPUChannels.hpp
	gui/wdgCheatsEditor.cpp
	gui/wdgCheatsEditor.hpp
	gui/wdgMenuBar.cpp
	gui/wdgMenuBar.hpp
	gui/wdgNTSCFilter.cpp
	gui/wdgNTSCFilter.hpp
	gui/wdgOverlayUi.cpp
	gui/wdgOverlayUi.hpp
	gui/wdgPaletteEditor.cpp
	gui/wdgPaletteEditor.hpp
	gui/wdgRewind.cpp
	gui/wdgRewind.hpp
	gui/wdgRotateScreen.cpp
	gui/wdgRotateScreen.hpp
	gui/wdgScreen.cpp
	gui/wdgScreen.hpp
	gui/wdgSettingsAudio.cpp
	gui/wdgSettingsAudio.hpp
	gui/wdgSettingsCheats.cpp
	gui/wdgSettingsCheats.hpp
	gui/wdgSettingsGeneral.cpp
	gui/wdgSettingsGeneral.hpp
	gui/wdgSettingsInput.cpp
	gui/wdgSettingsInput.hpp
	gui/wdgSettingsPPU.cpp
	gui/wdgSettingsPPU.hpp
	gui/wdgSettingsRecording.cpp
	gui/wdgSettingsRecording.hpp
	gui/wdgSettingsVideo.cpp
	gui/wdgSettingsVideo.hpp
	gui/wdgState.cpp
	gui/wdgState.hpp
	gui/wdgStatusBar.cpp
	gui/wdgStatusBar.hpp
	gui/wdgToolBar.cpp
	gui/wdgToolBar.hpp

	$<IF:$<BOOL:${ENABLE_OPENGL}>,
		gui/wdgOpenGL.cpp
		gui/wdgOpenGL.hpp,
		gui/wdgD3D9.cpp
		gui/wdgD3D9.hpp
	>

	$<$<PLATFORM_ID:Windows>:
		$<$<BOOL:${ENABLE_FULLSCREEN_RESFREQ}>:gui/windows/monitor.c>
		gui/windows/os_jstick.c
		gui/windows/resources.rc
	>

	$<$<PLATFORM_ID:FreeBSD,OpenBSD>:
		gui/bsd/os_jstick.c
	>

	$<$<PLATFORM_ID:Linux>:
		gui/linux/os_jstick.c
	>

	$<$<AND:$<PLATFORM_ID:FreeBSD,OpenBSD,Linux>,$<BOOL:${ENABLE_FULLSCREEN_RESFREQ}>>:
		gui/linux/monitor.c
	>
	)

set(video_srcs
	video/effects/pause.c
	video/effects/tv_noise.c
	video/filters/hq2x.c
	video/filters/hq3x.c
	video/filters/hq4x.c
	video/filters/hqx.c
	video/filters/nes_ntsc.c
	video/filters/ntsc.c
	video/filters/ntsc_bisqwit.c
	video/filters/scale.c
	video/filters/scale2x.c
	video/filters/scalers.c
	video/filters/xBRZ.c
	video/gfx.c
	$<$<BOOL:${ENABLE_FULLSCREEN_RESFREQ}>:
		video/gfx_monitor.c
	>
	video/gfx_thread.c
	video/shaders/shaders.c
	$<IF:$<BOOL:${ENABLE_OPENGL}>,
		video/opengl/glew/glew.c
		video/opengl/gfx_api.c
		video/opengl/opengl.c,
		video/d3d9/d3d9.c
		video/d3d9/gfx_api.c
	>
	)

add_executable(punes
	${audio_srcs}
	${core_srcs}
	${c++_srcs}
	${extra_srcs}
	${gui_ui_srcs}
	${gui_srcs}
	${video_srcs}
	${CMAKE_CURRENT_BINARY_DIR}/translations.qrc
	$<$<PLATFORM_ID:Windows>:gui/windows/resources.rc>
	)

target_include_directories(punes
	PRIVATE
	.
	audio
	core
	gui
	$<IF:$<BOOL:${ENABLE_OPENGL}>,
		${CMAKE_CURRENT_SOURCE_DIR}/video/opengl,
		${CMAKE_CURRENT_SOURCE_DIR}/video/d3d9
	>
	video/shaders
	"${PROJECT_BINARY_DIR}"
	$<$<PLATFORM_ID:FreeBSD,OpenBSD>:${CMAKE_CURRENT_SOURCE_DIR}/gui/bsd>
	$<$<PLATFORM_ID:Linux>:${CMAKE_CURRENT_SOURCE_DIR}/gui/linux>
	$<$<PLATFORM_ID:Windows>:
		${CMAKE_CURRENT_SOURCE_DIR}/gui/windows
		${CMAKE_CURRENT_SOURCE_DIR}/extra/windows/Cg/include
		${CMAKE_CURRENT_SOURCE_DIR}/extra/windows/DSDK/Include
		${CMAKE_CURRENT_SOURCE_DIR}/extra/windows/DSDK/vc10/include
	>
	)

target_link_options(punes
	PRIVATE
	$<$<PLATFORM_ID:Windows>:
		-static-libgcc
		-static-libstdc++
		$<$<BOOL:${ENABLE_RELEASE}>:-Wl,-subsystem,windows>
		$<$<NOT:$<BOOL:${ENABLE_RELEASE}>>:-Wl,-subsystem,console>
		$<IF:$<STREQUAL:${HOST_CPU},i386>,
			-L${CMAKE_CURRENT_SOURCE_DIR}/extra/windows/Cg/lib,
			-L${CMAKE_CURRENT_SOURCE_DIR}/extra/windows/Cg/lib.x64
		>
	>
	)

target_link_libraries(punes
	${QT_LIBS_USED}
	Threads::Threads
	$<$<BOOL:${ENABLE_FFMPEG}>:PkgConfig::LIBAV>
	$<$<PLATFORM_ID:FreeBSD,OpenBSD>:Sndio::Sndio>
	$<$<PLATFORM_ID:FreeBSD,OpenBSD>:UsbHid::UsbHid>
	$<$<PLATFORM_ID:Linux>:ALSA::ALSA>
	$<$<PLATFORM_ID:Linux>:PkgConfig::UDEV>
	${WIN_LIBS_USED}
	$<$<BOOL:${X11_FOUND}>:X11::Xrandr>
	OpenGL::GL
	$<$<AND:$<PLATFORM_ID:FreeBSD,OpenBSD,Linux>,$<BOOL:${ENABLE_OPENGL_CG}>>:Cg::CgGL>
	lib7zip
	qkeycode
	)

target_compile_options(punes
	PRIVATE
	#-Wall
	#-Wextra
	-ffast-math
	)

# warnings disabled for this
target_compile_options(lib7zip PRIVATE -w)
set_source_files_properties(core/patcher_xdelta3_wrap.c PROPERTIES COMPILE_OPTIONS -w)

target_compile_definitions(punes
	PRIVATE
	$<$<BOOL:${ENABLE_GIT_INFO}>:WITH_GIT_INFO>
	$<$<BOOL:${ENABLE_RELEASE}>:RELEASE>
	$<$<BOOL:${ENABLE_FFMPEG}>:WITH_FFMPEG>
	$<$<BOOL:${DISABLE_PORTABLE_MODE}>:WITHOUT_PORTABLE_MODE>
	$<IF:$<BOOL:${ENABLE_OPENGL}>,
		GLEW_STATIC
		WITH_OPENGL,
		WITH_D3D9
	>
	$<$<BOOL:${ENABLE_OPENGL_CG}>:WITH_OPENGL_CG>
	$<$<BOOL:${ENABLE_FULLSCREEN_RESFREQ}>:FULLSCREEN_RESFREQ>
	)

# Ship it!
install(TARGETS punes RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
