noinst_LIBRARIES = libcplus.a
libcplus_a_SOURCES = \
	l7zip/l7z.cpp \
	l7zip/l7z.h \
	l7zip/lib7zip.h \
	l7zip/stdafx.h

libcplus_a_SOURCES += \
	xBRZ/config.h \
	xBRZ/xbrz.cpp \
	xBRZ/xbrz.h \
	xBRZ/xbrz_wrap.cpp

libcplus_a_SOURCES += \
	crc/crc.h \
	crc/crc.cpp \
	crc/Crc32.h \
	crc/Crc32.cpp

libcplus_a_SOURCES += \
	pic16c5x/pic16c5x.h \
	pic16c5x/pic16c5x.cpp \
	pic16c5x/pic16c5x_m.h \
	pic16c5x/pic16c5x_m.cpp
	